# rag-pipeline-lab

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  pipeline.py  schemas.py
backend/app/api/routes/: documents.py  experiments.py  health.py  monitoring.py
backend/app/chunking/: __init__.py  strategies.py
backend/app/embeddings/: __init__.py  base.py  ollama.py
backend/app/evaluation/: __init__.py  service.py
backend/app/generation/: __init__.py  ollama.py  service.py
backend/app/indexing/: __init__.py  faiss_store.py
backend/app/ingestion/: __init__.py  parsers.py  service.py
backend/app/monitoring/: __init__.py  service.py
backend/app/retrieval/: __init__.py  service.py
backend/app/seed_docs/: evaluation_notes.md  rag_overview.md  retrieval_tuning.txt
backend/app/storage/: database.py  repositories.py  schema.sql
backend/app/tests/: test_chunking.py  test_evaluation.py  test_generation.py  test_monitoring.py
ui/: Dockerfile  index.html  package.json  tailwind.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AppShell.tsx  ConfigPanel.tsx  DocumentPicker.tsx  Panel.tsx  RetrievalInspector.tsx
ui/src/lib/: api.ts  defaults.ts  format.ts
ui/src/pages/: ComparePage.tsx  ExperimentPage.tsx  HistoryPage.tsx  LibraryPage.tsx  MonitorPage.tsx
ui/src/types/: index.ts
